# ChangeLog for dev-libs/cyberjack
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyberjack/ChangeLog,v 1.14 2010/07/25 12:45:21 wschlich Exp $

*cyberjack-3.3.5-r2 (25 Jul 2010)

  25 Jul 2010; Wolfram Schlich <wschlich@gentoo.org>
  -cyberjack-3.3.5-r1.ebuild, +cyberjack-3.3.5-r2.ebuild:
  this time really fix udev rules

*cyberjack-3.3.5-r1 (14 Jul 2010)

  14 Jul 2010; Wolfram Schlich <wschlich@gentoo.org> -files/cyberjack.rules,
  +files/cyberjack.rules-r1, -cyberjack-3.3.5.ebuild,
  +cyberjack-3.3.5-r1.ebuild:
  fix udev rules

  19 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  cyberjack-3.3.5.ebuild:
  Fix libusb depend to virtual/libusb:1 wrt #320507 by Oliver Schwabedissen.

*cyberjack-3.3.5 (18 May 2010)

  18 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  +cyberjack-3.3.5.ebuild:
  Version bump wrt #314081 by Peter Gantner.

*cyberjack-3.3.2 (19 Nov 2009)

  19 Nov 2009; Wolfram Schlich <wschlich@gentoo.org>
  -files/91-cyberjack.rules, -cyberjack-2.0.13.ebuild,
  -files/cyberjack-2.0.13-build.patch, -files/cyberjack-2.0.13-qa.patch,
  -files/cyberjack-2.0.13-udev.patch, -cyberjack-2.0.14_beta1.ebuild,
  -cyberjack-3.0.4.ebuild, -files/cyberjack-3.0.4-udev.patch,
  +cyberjack-3.3.2.ebuild, +files/cyberjack-3.3.2-nohal.patch,
  +files/cyberjack-3.3.2-nopcsc.patch, +files/cyberjack-3.3.2-udev.patch:
  version bump, removed old versions. also fixes bug #227539.

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  cyberjack-2.0.13.ebuild, cyberjack-2.0.14_beta1.ebuild,
  cyberjack-3.0.4.ebuild:
  Migration to virtual/libusb. Verified by code inspection.

  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  18 May 2008; Samuli Suominen <drac@gentoo.org> cyberjack-2.0.13.ebuild,
  cyberjack-2.0.14_beta1.ebuild, cyberjack-3.0.4.ebuild:
  Move pkgconfig to DEPEND.

*cyberjack-3.0.4 (20 Sep 2007)
